fixed sprite sheet too big hitbox

--- a/main.css
+++ b/main.css
@@ -1,19 +1,5 @@
 
 
-#game-container {
-  min-width: 100vw;
-  min-height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-}
-
-#game-container>canvas {
-  border-radius: 5px;
-}
-
 
 h1{
     text-transform: uppercase;
